2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/ColorBlock.java
    (arrange): New method override,
    (draw): Add code for margin, border and padding,
    * source/org/jfree/chart/block/EmptyBlock.java
    (arrange): New method override,
    (draw(Graphics2D, Rectangle2D)): Delegate,
    (draw(Graphics2D, Rectangle2D, Object)): New method override.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimePeriodValue.java
    (toString): New method override,
    * source/org/jfree/data/time/TimePeriodValues.java
    (updateBounds): Update maxMiddleIndex correctly,
    * tests/org/jfree/data/time/junit/TimePeriodValues.java
    (testGetMinStartIndex): New test method,
    (testGetMaxStartIndex): Likewise,
    (testGetMinMiddleIndex): Likewise,
    (testGetMaxMiddleIndex): Likewise,
    (testGetMinEndIndex): Likewise,
    (testGetMaxEndIndex): Likewise.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CategoryPlot.java
    (removeDomainMarker): Check for null collection,
    (removeRangeMarker): Likewise,
    * source/org/jfree/chart/plot/XYPlot.java
    (removeDomainMarker): Check for null collection,
    (removeRangeMarker): Likewise.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DefaultKeyedValue.java
    (equals): Simplified to reflect that this.key is never null.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java
    (drawItem): Inserted code to add entities.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (equals): Updated for labelLinkStyle field.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1891849 by Martin Hilpert:
    * source/org/jfree/chart/plot/PieLabelLinkStyle.java: New file,